@startuml
'https://plantuml.com/class-diagram

skinparam dpi 500
abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getSpeedX():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractProp

interface EnemyFactory{
   + enemyCreator():AbstractAircraft
}

interface PropFactory{
   + randomPropCreator(AbstractAircraft enemyAircraft):AbstractProp
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    # shoootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy strategy)
    + decreaseHp(int decrease):void
    + getHp():int
    + setShootStrategy(ShootStrategy strategy):void
    + getShootStrategy(): ShootStrategy
    + shoot():List<BaseBullet>
 }


abstract class AbstractProp{
    + AbstractProp(int locationX, int locationY, int speedX, int speedY)
    + {abstract}function(HeroAircraft heroAircraft):void
}

EnemyFactory <|.. MobFactory
EnemyFactory <|.. EliteFactory
EnemyFactory <|.. BossFactory

PropFactory <|.. RandomPropFactory


AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- FireProp

MobFactory ..> MobEnemy
EliteFactory ..> EliteEnemy
BossFactory ..> BossEnemy

AbstractProp <.. RandomPropFactory

class MobFactory{
    + enemyCreator():AbstractAircraft
}

class EliteFactory{
    + enemyCreator():AbstractAircraft
}

class BossFactory{
    + enemyCreator():AbstractAircraft
}

class RandomPropFactory{
    + randomPropCreator(AbstractAircraft enemyAircraft):AbstractProp
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy strategy)
    + forward():void
    + update():void
}

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy strategy)
    + forward():void
    + update():void
}

class BossEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp, ShootStrategy strategy)
    + forward():void
}

class BloodProp{
    + BloodProp(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}
class BombProp{
    - enemyAndEnemyBullet:List<AbstractFlyingObject>
    + BombProp(int locationX, int locationY, int speedX, int speedY)
    + addBombed(AbstractFlyingObject bombed):void
    + removeBombed(AbstractFlyingObject bombed):void
    + notifyAllSub():void
    + function(HeroAircraft heroAircraft):void
}
class FireProp{
    + FireProp(int locationX, int locationY, int speedX, int speedY)
    + function(HeroAircraft heroAircraft):void
}

@enduml